@@ -74,10 +74,13 @@ unixLogin = os.environ['USER']
 
 # Initialize db.py DBMS parameters
 db.set_sqlLogin(user, password, server, database)
+db.useOneConnection(1)
  
 # Create the Job Stream 
-results = db.sql('exec APP_createJobStream "%s", "%s"'  % (jobStreamName, unixLogin), 'auto')
-jobStreamKey = int(results[0][''])
+results = db.sql('select * from APP_createJobStream(\'%s\', \'%s\')'  % (jobStreamName, unixLogin), 'auto')
+jobStreamKey = int(results[0]['app_createjobstream'])
+
+db.commit()
 
 # print to stdout so wrapper can grab it
 print jobStreamKey	
